--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@ bower_components
 # node-waf configuration
 .lock-wscript
 .settings
+.project
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
